Performance and logging improvements
Improved speed of signature search
Improved speed and ease of logging
- Doesn't open and close logging file constantly
- Flushing behaviour configurable
- Logging level configurable
- Accepts any kind of data
Fixed up .gitignore with wildcards

--- a/.gitignore
+++ b/.gitignore
@@ -1,103 +1,36 @@
-proj/Debug/addons.obj
-proj/Debug/console.obj
+# Build Objects
 *.obj
 *.log
 *.tlog
-proj/Debug/vc120.idb
-proj/Debug/vc120.pdb
+proj/Release/*
+proj/Debug/*
+
+# VS user specific files
 proj/IPHLPAPI.sdf
 proj/IPHLPAPI.v12.suo
 proj/IPHLPAPI.vcxproj.filters
 proj/IPHLPAPI.vcxproj.user
-proj/Release/vc120.pdb
-incl/curl/Makefile.am
-incl/curl/Makefile.in
-incl/curl/curl.h
-incl/curl/curlbuild.h
-incl/curl/curlbuild.h.cmake
-incl/curl/curlbuild.h.in
-incl/curl/curlrules.h
-incl/curl/curlver.h
-incl/curl/easy.h
-incl/curl/mprintf.h
-incl/curl/multi.h
-incl/curl/stdcheaders.h
-incl/curl/typecheck-gcc.h
-lib/libcurl_a.lib
+proj/IPHLPAPI.opensdf
+
+# Library includes (excluding detours)
+incl/curl/*
+incl/openssl/*
+incl/crc32.h
+incl/deflate.h
+incl/gzguts.h
+incl/inffast.h
+incl/inffixed.h
+incl/inflate.h
+incl/inftrees.h
+incl/trees.h
+incl/zconf.h
+incl/zlib.h
+
+# Library libs (excluding detours)
+lib/engines/*
+lib/libcurl_a.*
 lib/libcurl_a_debug.lib
-incl/openssl/aes.h
-incl/openssl/applink.c
-incl/openssl/asn1.h
-incl/openssl/asn1_mac.h
-incl/openssl/asn1t.h
-incl/openssl/bio.h
-incl/openssl/blowfish.h
-incl/openssl/bn.h
-incl/openssl/buffer.h
-incl/openssl/camellia.h
-incl/openssl/cast.h
-incl/openssl/cmac.h
-incl/openssl/cms.h
-incl/openssl/comp.h
-incl/openssl/conf.h
-incl/openssl/conf_api.h
-incl/openssl/crypto.h
-incl/openssl/des.h
-incl/openssl/des_old.h
-incl/openssl/dh.h
-incl/openssl/dsa.h
-incl/openssl/dso.h
-incl/openssl/dtls1.h
-incl/openssl/e_os2.h
-incl/openssl/ebcdic.h
-incl/openssl/ec.h
-incl/openssl/ecdh.h
-incl/openssl/ecdsa.h
-incl/openssl/engine.h
-incl/openssl/err.h
-incl/openssl/evp.h
-incl/openssl/hmac.h
-incl/openssl/idea.h
-incl/openssl/krb5_asn.h
-incl/openssl/kssl.h
-incl/openssl/lhash.h
-incl/openssl/md4.h
-incl/openssl/md5.h
-incl/openssl/mdc2.h
-incl/openssl/modes.h
-incl/openssl/obj_mac.h
-incl/openssl/objects.h
-incl/openssl/ocsp.h
-incl/openssl/opensslconf.h
-incl/openssl/opensslv.h
-incl/openssl/ossl_typ.h
-incl/openssl/pem.h
-incl/openssl/pem2.h
-incl/openssl/pkcs12.h
-incl/openssl/pkcs7.h
-incl/openssl/pqueue.h
-incl/openssl/rand.h
-incl/openssl/rc2.h
-incl/openssl/rc4.h
-incl/openssl/ripemd.h
-incl/openssl/rsa.h
-incl/openssl/safestack.h
-incl/openssl/seed.h
-incl/openssl/sha.h
-incl/openssl/srp.h
-incl/openssl/srtp.h
-incl/openssl/ssl.h
-incl/openssl/ssl2.h
-incl/openssl/ssl23.h
-incl/openssl/ssl3.h
-incl/openssl/stack.h
-incl/openssl/symhacks.h
-incl/openssl/tls1.h
-incl/openssl/ts.h
-incl/openssl/txt_db.h
-incl/openssl/ui.h
-incl/openssl/ui_compat.h
-incl/openssl/whrlpool.h
-incl/openssl/x509.h
-incl/openssl/x509_vfy.h
-incl/openssl/x509v3.h
+lib/libeay32.*
+lib/ssleay32.*
+lib/zlib.*
+
